--- a/RetentionUnit/Views/Home/SelectedClient.cshtml
+++ b/RetentionUnit/Views/Home/SelectedClient.cshtml
@@ -24,6 +24,7 @@
                 <input type="text" class="form-control" name="StopList" value="@Model.StopList" disabled>
             </div>
             <div class="col-md-2 mb-2">
+                <label>Действие</label>
                 <input type="button" class="form-control btn btn-danger" name="StopList" value="УБРАТЬ" >
             </div>
             <div class="col-md-6 mb-3">
