--- a/RetentionUnit/Views/Shared/_Layout.cshtml
+++ b/RetentionUnit/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - RetentionUnit - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            @Html.Partial("SaveResponse")
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
